--- a/styles/main.css
+++ b/styles/main.css
@@ -3830,7 +3830,7 @@ ol {
   bottom: 0;
   width: 250px;
   height: 100%;
-  background-color: #3367D6;
+  background-color: #E7162E;
   color: #fefefe;
   -webkit-transform: translate(-250px, 0);
   transform: translate(-250px, 0);
