--- a/styles/main.css
+++ b/styles/main.css
@@ -25,7 +25,11 @@ textarea {
 
 body {
   font-size: 1em;
-  line-height: 1.4;
+  line-height: 1.4;}
+body{
+   background:url( {data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAAFCAYAAACAcVaiAAAAHElEQVQIW2NkQID/jED2fyAG0RACBpA5YGVwAABzvQMENezE8QAAAABJRU
+
+} ) repeat;
 }
 
 a {
