--- a/styles/main.css
+++ b/styles/main.css
@@ -27,9 +27,9 @@ body {
   font-size: 1em;
   line-height: 1.4;}
 body{
-   background:url( {data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAAFCAYAAACAcVaiAAAAHElEQVQIW2NkQID/jED2fyAG0RACBpA5YGVwAABzvQMENezE8QAAAABJRU
+   background:url( data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAAFCAYAAACAcVaiAAAAHElEQVQIW2NkQID/jED2fyAG0RACBpA5YGVwAABzvQMENezE8QAAAABJRU
 
-} ) repeat;
+ ) repeat;
 }
 
 a {
