--- a/styles/main.css
+++ b/styles/main.css
@@ -26,10 +26,15 @@ textarea {
 body {
   font-size: 1em;
   line-height: 1.4;}
-body{
-   background:url( data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAAFCAYAAACAcVaiAAAAHElEQVQIW2NkQID/jED2fyAG0RACBpA5YGVwAABzvQMENezE8QAAAABJRU
 
- ) repeat;
+/* inserimento pattern*/
+
+.body-special{
+   background:
+linear-gradient(135deg, #708090 22px, #d9ecff 22px, #d9ecff 24px, transparent 24px, transparent 67px, #d9ecff 67px, #d9ecff 69px, transparent 69px),
+linear-gradient(225deg, #708090 22px, #d9ecff 22px, #d9ecff 24px, transparent 24px, transparent 67px, #d9ecff 67px, #d9ecff 69px, transparent 69px)0 64px;
+background-color:#708090;
+background-size: 64px 128px
 }
 
 a {
